--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "@types/body-parser": "^1.19.0",
+    "@types/jsonwebtoken": "^9.0.6",
     "winston": "^3.12.0"
   }
 }
