--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
       "@/*": ["*"]
     }
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "express.d.ts"],
   "exclude": ["node_modules"]
 }
